# serl-plus-plus

./: .gitignore  README.md  pyproject.toml
demos/: record_demo.py  train_rlpd.py
demos/experiments/: config.py  mappings.py
demos/experiments/peg_insert_pointcloud_sim/: config.py  peg_insert_sim_20_demos.pkl.1  run_actor.sh  run_learner.sh
demos/experiments/peg_insert_sim/: config.py  run_actor.sh  run_learner.sh
infra/hardware/camera/: multi_video_capture.py  video_capture.py
infra/hardware/spacemouse/: pyspacemouse.py  spacemouse_expert.py  test_spacemouse.py
infra/sim/: __init__.py
infra/sim/controllers/: impedance.py
infra/sim/envs/: __init__.py  mujoco_gym_env.py  panda_insert_gym_env.py  panda_insert_pointcloud_gym_env.py
infra/sim/envs/assets/: panda.xml  panda_hand.xml  panda_peg_insert.xml  panda_pick_cube.xml  peg_hole.xml
infra/utils/: transformations.py  vision_util.py
infra/wrappers/: gripper.py  intervention.py  relative_frame.py  robot_pose.py
launcher/: __init__.py  launch.py
launcher/agents/: sac.py
launcher/common/: encoding.py  wandb.py
launcher/data/: data_store.py  dataset.py  replay_buffer.py
launcher/networks/: actor_critic_nets.py  lagrange.py  mlp.py
launcher/utils/: data_utils.py  timer_utils.py  torch_utils.py  train_utils.py
launcher/vision/: augmentations.py  pointnet.py  timm_encoder.py
launcher/wrappers/: chunking.py  serl_obs.py
